added monorepo workspace for hosting

--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "01-birthday-reminder",
     "02-tours",
     "03-reviews",
-    "04-accordion"
+    "04-accordion",
+    "05-menu"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:01-birthday-reminder": "npm workspace 01-birthday-reminder run build",
     "build:02-tours": "npm workspace 02-tours run build",
     "build:03-reviews": "npm workspace 03-reviews run build",
-    "build:04-accordion": "npm workspace 04-accordion run build"
+    "build:04-accordion": "npm workspace 04-accordion run build",
+    "build:05-menu": "npm workspace 05-menu run build"
   },
   "repository": {
     "type": "git",
