--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "02-tours",
     "03-reviews",
     "04-accordion",
-    "05-menu"
+    "05-menu",
+    "06-tabs"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -17,7 +18,8 @@
     "build:02-tours": "npm workspace 02-tours run build",
     "build:03-reviews": "npm workspace 03-reviews run build",
     "build:04-accordion": "npm workspace 04-accordion run build",
-    "build:05-menu": "npm workspace 05-menu run build"
+    "build:05-menu": "npm workspace 05-menu run build",
+    "build:06-tabs": "npm workspace 06-tabs run build"
   },
   "repository": {
     "type": "git",
