--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "04-accordion",
     "05-menu",
     "06-tabs",
-    "07-slider"
+    "07-slider",
+    "08-lorem-ipsum"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -21,7 +22,8 @@
     "build:04-accordion": "npm workspace 04-accordion run build",
     "build:05-menu": "npm workspace 05-menu run build",
     "build:06-tabs": "npm workspace 06-tabs run build",
-    "build:07-slider": "npm workspace 07-slider run build"
+    "build:07-slider": "npm workspace 07-slider run build",
+    "build:08-lorem-ipsum": "npm workspace 08-lorem-ipsum run build"
   },
   "repository": {
     "type": "git",
