added media query on color generator

--- a/09-colour-generator/package.json
+++ b/09-colour-generator/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "09-colour-generator",
+  "name": "09-color-generator",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
