--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "07-slider",
     "08-lorem-ipsum",
     "09-color-generator",
-    "10-grocery-bud"
+    "10-grocery-bud",
+    "11-navbar"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -27,7 +28,8 @@
     "build:07-slider": "npm workspace 07-slider run build",
     "build:08-lorem-ipsum": "npm workspace 08-lorem-ipsum run build",
     "build:09-color-generator": "npm workspace 09-color-generator run build",
-    "build:10-grocery-bud": "npm workspace 10-grocery-bud run build"
+    "build:10-grocery-bud": "npm workspace 10-grocery-bud run build",
+    "build:11-navbar": "npm workspace 11-navbar run build"
   },
   "repository": {
     "type": "git",
